--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Oct  5 21:00:54 2004  Tim Janik  <timj@gtk.org>
+
+        * gtk/gtkwidget.c (gtk_widget_size_allocate): applied owen's patch
+	for conditional ALLOC_NEEDED flag updates to preserve resizing
+	flag invariants.
+
 2004-10-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Set 
