--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkenums.sgml: Document selection modes. 
+	(#154188, Jonathan Blandford, wording proposed by Owen Taylor)
+
 2004-09-21  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/running.sgml: Refer to GTK2_RC_FILES, not to
