--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-06  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Fixed an incorrect string.
+
 2004-10-03  Jesus Bravo Alvarez  <suso@trasno.net>
 
 	* gl.po: Updated Galician translation.
