Also update smart separators if the visibility of a menuitem with a
2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (update_node): Also update smart separators
	if the visibility of a  menuitem with a submenu changes.  (#153791,
	Christian Persch)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkuimanager.c (update_node): Also update smart separators 
+	if the visibility of a  menuitem with a submenu changes.  (#153791,
+	Christian Persch)
+
 2004-10-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c (check_is_folder): Don't free
