Set cell data unconditionally. (#152562, Federico Mena Quintero)
2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Set cell data
	unconditionally.  (#152562, Federico Mena Quintero)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-10-08  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_button_press): Set cell data
+	unconditionally.  (#152562, Federico Mena Quintero)
+
 	* gtk/gtklayout.c (gtk_layout_add): Implement the GtkContainer::add 
 	vfunc. (#15444, Lorenzo Gil Sanchez)
 
