--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-10  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2004-10-08  Matthias Clasen  <mclasen@redhat.com> 
 
 	* === Released 2.4.11 ===
