--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2004-10-18  Matthias Clasen  <mclasen@redhat.com>
+
+	Fix #155658, Sebastian Bacher:
+	
+	* gdk/x11/gdkwindow-x11.h (struct _GdkToplevelX11): Add a new 
+	is_leader flag.
+
+	* gdk/x11/gdkwindow-x11.c (update_wm_hints): Set wm hints on
+	leader windows even if they are withdrawn.
+	(gdk_window_set_group): Mark the new leader window as such. We 
+	never remove the flag again, but that should a) be vanishingly
+	rare and b) not a problem, since the flag just turns off an
+	optimization.
+
+	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Mark the default
+	leader window as such.
+
 2004-10-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkcellview.c (gtk_cell_view_get_size_of_row): Restore 
