--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-22  Anders Carlsson  <andersca@gnome.org>
+
+	* gtk/gtktexttag.c: (gtk_text_tag_get_property):
+	GdkBitmap is a GObject, not a boxed type.
+
 2004-10-18  Matthias Clasen  <mclasen@redhat.com>
 
 	Fix #155658, Sebastien Bacher:
