Updated Indonesian translation
2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>

	* id.po: Updated Indonesian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>
+
+	* id.po: Updated Indonesian translation
+
 2004-10-12  Matthias Clasen  <mclasen@redhat.com> 
 
 	* pa.po: Fix a problem with the translation
