--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-29  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_finalize): 
+	Drop the reference to the pixbuf, regardless whether it is
+	a stock pixbuf.  (#156863, Philip Langdale)
+
 2004-10-23  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): Invalidate 
