--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-11-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkliststore.c (gtk_list_store_move): Take into account
+	that a can be NULL even if position is not. This fixes the 
+	inability of gtk_list_store_move() to move rows to the very
+	beginning.  (#155545, John Finlay)
+
 2004-11-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Don't crash on
