--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-11-03  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfilechooserdefault.c (new_folder_button_clicked): 
+	Don't leak the path.  (#157301, Carlos Garnacho Parro)
+
 	* gtk/gtkliststore.c (gtk_list_store_move): Take into account
 	that a can be NULL even if position is not. This fixes the 
 	inability of gtk_list_store_move() to move rows to the very
