--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-06  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_pack_end): 
+	Add the ComboCellInfo to the list.  (#157528, Carlos Garnacho
+	Parro)
+
 2004-11-03  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c (new_folder_button_clicked): 
