--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov 11 17:22:45 2004  Manish Singh  <yosh@gimp.org>
+
+	* gtk/gtkuimanager.c: gtkalias.h doesn't exist on this branch. Remove
+	reference.
+
 2004-11-11  Tor Lillqvist  <tml@iki.fi>
 
 	Fix for #137551, by Robert Ögren:
