--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Fix conflicting mnemonics.
+	* no.po: Update.
+
 2004-10-25  Mohammad DAMT  <mdamt@bisnisweb.com>
 
 	* id.po: Updated Indonesian translation
