--- a/po/nb.po
+++ b/po/nb.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: gtk+ 2.3.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-10-12 16:19-0400\n"
-"PO-Revision-Date: 2004-07-29 22:56+0200\n"
+"PO-Revision-Date: 2004-11-15 17:22+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian (bokmål) <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -1758,7 +1758,7 @@ msgstr "E_genskaper"
 
 #: gtk/gtkstock.c:338
 msgid "_Quit"
-msgstr "_Avslutt"
+msgstr "A_vslutt"
 
 #: gtk/gtkstock.c:339
 msgid "_Redo"
