--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-11-15  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkbutton.c: 
+	* gtk/gtkimagemenuitem.c: Don't use one signal handler per
+	instance to track changes to the gtk-menu-images and
+	gtk-button-images settings. Instead use a single handler which 
+	iterates over the widget hierarchy. (#143668)
+
 Mon Nov 15 14:25:21 2004  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_cell_set_dirty):
