Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-22  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2004-11-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Fix conflicting mnemonics.
