Updated Simplified Chinese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-22  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-11-22  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
@@ -93,7 +97,7 @@
 2004-09-15  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
-	Alessio Dessì <alessiodessi@tiscali.it>.
+	Alessio Dess <alessiodessi@tiscali.it>.
 
 2004-09-15  Abel Cheung  <maddog@linuxhall.org>
 
