--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-30  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* configure.in: Added "nso" to ALL_LINGUAS.
+
 2004-11-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* NEWS: Updates
