--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-30  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* nso.po: Added Northern Sotho translation by
+	Zuza Software Foundation <info@translate.org.za>.
+
 2004-10-12  Matthias Clasen  <mclasen@redhat.com> 
 
 	* === Released 2.4.13 ===
