--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-02  Sven Neumann  <sven@gimp.org>
+
+	* gtk/gtkaccelmap.c (_gtk_accel_path_is_valid): added parentheses
+	around && within ||.
+
 2004-11-30  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* configure.in: Added "nso" to ALL_LINGUAS.
