--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-05  Tor Lillqvist  <tml@iki.fi>
+
+	* demos/gtk-demo/images.c (progressive_timeout): Open png file in
+	binary mode.
+
 2004-12-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
